# ChangeLog for dev-python/qscintilla-python
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  qscintilla-python-2.4.ebuild:
  Fix configuration. Avoid eval as requested by yngwin.

  08 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  qscintilla-python-2.4.ebuild:
  Added debug USE flag, enabled qt4 by default, dropped useless
  src_compile(), fixed quoting.

  06 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -qscintilla-python-2.4_pre20090603.ebuild, qscintilla-python-2.4.ebuild:
  Drop snapshot, fix licenses

  05 Jun 2009; Ben de Groot <yngwin@gentoo.org>
  qscintilla-python-2.4.ebuild:
  Update dependencies

*qscintilla-python-2.4 (05 Jun 2009)

  05 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +qscintilla-python-2.4.ebuild:
  Version bump

*qscintilla-python-2.4_pre20090603 (04 Jun 2009)

  04 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -qscintilla-python-2.4_pre20090530.ebuild,
  +qscintilla-python-2.4_pre20090603.ebuild:
  Automatic snapshot bump, remove old ebuild

*qscintilla-python-2.4_pre20090530 (01 Jun 2009)

  01 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -qscintilla-python-2.4_pre20090527.ebuild,
  +qscintilla-python-2.4_pre20090530.ebuild:
  Automatic snapshot bump, remove old ebuild

*qscintilla-python-2.4_pre20090527 (30 May 2009)

  30 May 2009; Markos Chandras <hwoarang@gentoo.org>
  -qscintilla-python-2.4_pre20090519.ebuild,
  +qscintilla-python-2.4_pre20090527.ebuild:
  Automatic snapshot bump, remove old ebuild

  21 May 2009; Markos Chandras <hwoarang@gentoo.org>
  qscintilla-python-2.4_pre20090519.ebuild:
  Change SRC_URI because upstream deletes old snapshots once a while

*qscintilla-python-2.4_pre20090519 (20 May 2009)

  20 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  -qscintilla-python-2.4_pre20090509.ebuild,
  +qscintilla-python-2.4_pre20090519.ebuild:
  version bump
