@@ -1,2 +1,4 @@
-MISC ChangeLog 2169 RMD160 8c6418cd28a7ecdf4e4dd1b9e6b0e45730a7a8f4 SHA1 fca6e52d83c9a56e225078460fc12c44c6435dc6 SHA256 46cb391f32fcef5d7bd3d5a80369e3c6e77608a29c9ddc249c4820e968064b01
+DIST QScintilla-gpl-2.4.1-snapshot-20090809.tar.gz 2269515 RMD160 fc026e8c6aea4d8648bf4fbd293d83f0c066463a SHA1 7b5fd52cef2a25e1b95d630edbff0df1b451d4a8 SHA256 ac4462fcfc92b37fc1bb6fef584e259c0648746ebc90d70d9017ec1244e409b6
+EBUILD qscintilla-python-2.4.1_pre20090809.ebuild 1510 RMD160 d81d5a5e9782a9536846cd62cd1c229b15b04e24 SHA1 b5871414d21858fb451c144a7100c6114d38adf6 SHA256 4b739a2ffae122d2c88c3bef67de211c75da15d2aa7b1cfc9680fb9631e59ac2
+MISC ChangeLog 2337 RMD160 3cad2bf3ff0e8c943e0c887031111b3377435feb SHA1 7dcf78bd0d3790f3a996d34ac8f8d493942594e9 SHA256 52fb832ced366e15699de8b8e2ab8f68775b0b85f06ad10481cee30f0102448f
 MISC metadata.xml 175 RMD160 74ecde8b999da503a2733b49ed618d5d50d26476 SHA1 ec86e15b85c2bc4429ad67bb52238b44f2b16cbd SHA256 26b18db06b1665422af8905fb70f8f48920a048578172d62b9689e273ee39a2d
