@@ -1,0 +1,60 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla-python/qscintilla-python-2.4.ebuild,v 1.6 2009/08/05 18:48:38 arfrever Exp $
+
+EAPI="2"
+SUPPORT_PYTHON_ABIS="1"
+
+inherit eutils multilib python toolchain-funcs
+
+MY_P="QScintilla-gpl-${PV/_pre/-snapshot-}"
+
+DESCRIPTION="Python bindings for Qscintilla"
+HOMEPAGE="http://www.riverbankcomputing.co.uk/software/qscintilla/intro"
+SRC_URI="http://dev.gentooexperimental.org/~hwoarang/distfiles/${MY_P}.tar.gz"
+
+LICENSE="|| ( GPL-2 GPL-3 )"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE="debug +qt4"
+
+DEPEND=">=dev-python/sip-4.8
+	~x11-libs/qscintilla-${PV}[qt4=]
+	qt4? ( >=dev-python/PyQt4-4.5[X] )
+	!qt4? ( >=dev-python/PyQt-3.18 )"
+RDEPEND="${DEPEND}"
+
+S="${WORKDIR}/${MY_P}/Python"
+
+src_prepare() {
+	epatch "${FILESDIR}/${PN}-2.4-nostrip.patch"
+
+	python_copy_sources
+}
+
+src_configure() {
+	configuration() {
+		local myconf="$(PYTHON) configure.py
+				--destdir=$(python_get_sitedir)/PyQt$(use qt4 && echo 4)
+				-n /usr/include
+				-o /usr/$(get_libdir)
+				-p $(use qt4 && echo 4 || echo 3)
+				$(use debug && echo '--debug')"
+		echo ${myconf}
+		${myconf}
+	}
+	python_execute_function -s configuration
+}
+
+src_compile() {
+	building() {
+		emake CC="$(tc-getCC)" CXX="$(tc-getCXX)" LINK="$(tc-getCXX)"
+	}
+	python_execute_function -s building
+}
+
+src_install() {
+	python_need_rebuild
+
+	python_execute_function -d -s
+}
