@@ -2,15 +2,17 @@
 # Add your name and the date, as well as an explanation for the mask
 # Make sure the atoms you add are valid!
 
+# Markos Chandras <hwoarang@gentoo.org> (12 Aug 2009)
+# Snapshots are not for everybody :)
+=dev-python/sip-4.9_pre*
+=dev-python/PyQt4-4.6_pre*
+=dev-python/qscintilla-python-2.4.1_pre*
+=x11-libs/qscintilla-2.4.1_pre*
+
 # Markos Chandars <hwoarang@gentoo.org> (04 Aug 2009)
 # Portage fails to merge it due to unicode names on folders.
 # Awaitting patch from zmedico
 =media-video/2mandvd-0.9
-
-# Markos Chandras <hwoarang@gentoo.org> (25 Jul 2009)
-# Snapshots are not for everybody :)
-=dev-python/sip-4.9_pre*
-=dev-python/PyQt4-4.6_pre*
 
 # Markos Chandras <hwoarang@gentoo.org> (25 Jul 2009)
 # Alpha versions are not for everybody :)
