@@ -1,2 +1,4 @@
-MISC ChangeLog 2468 RMD160 a8ccdaa9614d6888d2577e3ee9083517ba37a2c7 SHA1 cbba3377d4b34aabece93b7695925a5834fdb18e SHA256 9392f7c895ae1a4a16bcb42d5457cde5fff52894ef1b25cd22e3914a4b70e460
+DIST QScintilla-gpl-2.4.1-snapshot-20090809.tar.gz 2269515 RMD160 fc026e8c6aea4d8648bf4fbd293d83f0c066463a SHA1 7b5fd52cef2a25e1b95d630edbff0df1b451d4a8 SHA256 ac4462fcfc92b37fc1bb6fef584e259c0648746ebc90d70d9017ec1244e409b6
+EBUILD qscintilla-2.4.1_pre20090809.ebuild 2411 RMD160 f112e9953685f85f83a0ab8437d7f0088d495d81 SHA1 e55bf9ebbb7e0e0a642b1ce6be9c84e241f0d739 SHA256 3ab2e652321f7771597dab1459cf1facdc822422af8ee998c60fa347fe9627e5
+MISC ChangeLog 2622 RMD160 46fbefda8f6986b68607a21bccf857b386a66355 SHA1 7d06188349e3b2d75da8a113e1fb100e16a587dc SHA256 26658e00aeb6fab094e3ade97174327bb5b0eb77e96e4dfa9d3e7c0114de61f0
 MISC metadata.xml 175 RMD160 74ecde8b999da503a2733b49ed618d5d50d26476 SHA1 ec86e15b85c2bc4429ad67bb52238b44f2b16cbd SHA256 26b18db06b1665422af8905fb70f8f48920a048578172d62b9689e273ee39a2d
