@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qscintilla-python-2.4.1_pre20090809 (12 Aug 2009)
+
+  12 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
+  +qscintilla-python-2.4.1_pre20090809.ebuild:
+  New snapshot
+
   08 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
   qscintilla-python-2.4.ebuild:
   Fix configuration. Avoid eval as requested by yngwin.
